--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_C_STANDARD 11)
 
 find_package(SDL REQUIRED)
 find_package(SDL_net REQUIRED)
+find_package(SDL_ttf REQUIRED)
 
 add_executable(bomberman
         src/main.c
@@ -16,5 +17,5 @@ add_executable(bomberman
         src/Multiplayer.h
 )
 
-target_link_libraries(bomberman PRIVATE ${SDL_LIBRARY} ${SDL_NET_LIBRARY})
+target_link_libraries(bomberman PRIVATE ${SDL_LIBRARY} ${SDL_NET_LIBRARY} ${SDL_TTF_LIBRARY})
 target_include_directories(bomberman PRIVATE ${SDL_INCLUDE_DIR})
