--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(bomberman C)
 set(CMAKE_C_STANDARD 11)
 
 find_package(SDL REQUIRED)
+find_package(SDL_image REQUIRED)
 
 add_executable(bomberman
         src/main.c
@@ -13,5 +14,5 @@ add_executable(bomberman
         src/Graphics.c
 )
 
-target_link_libraries(bomberman PRIVATE ${SDL_LIBRARY})
-target_include_directories(bomberman PRIVATE ${SDL_INCLUDE_DIR})
+target_link_libraries(bomberman PRIVATE ${SDL_LIBRARY} ${SDL_IMAGE_LIBRARY})
+target_include_directories(bomberman PRIVATE ${SDL_INCLUDE_DIR} ${SDL_IMAGE_INCLUDE})
