--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,8 @@ add_executable(bomberman_SDL2_2
         src/Map.h
         src/Utils.h
         src/Player.h
-        src/Player.c)
+        src/Player.c
+)
 
 # Spécifiez les bibliothèques SDL2 à lier
 target_link_directories(bomberman_SDL2_2 PRIVATE ${SDL2_LIBRARY_DIR})
