fix bug Player* origin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ add_executable(bomberman_SDL2_2
         src/Utils.h
         src/Player.h
         src/Player.c
+        src/Bomb.c
+        src/Bomb.h
 )
 
 # Spécifiez les bibliothèques SDL2 à lier
